--- a/portfolio.html
+++ b/portfolio.html
@@ -1,72 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
-
 <head>
-    <meta charset="utf-8">
-    <title>Frank Mcdonald</title>
-    <link href="assets/css/reset.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
 <body>
-    <header>
-        <div class="container">
-            <a href="index.html/" id="logo">Frank Mcdonald</a>
-                <nav>
-                    <a href="/index.html/">About Me</a>
-                    <a href="/portfolio.html/">Portfolio</a>
-                    <a href="/contact.html">Contact</a>
-                </nav>
-        </div>
-    </header>
-
-	<div id="main-container" class="container">
-    	<section class="Main">
-       	<h1>Portfolio</h1>
-        	<div class="work">
-       		<img src="" class="" alt="">
-        	<h3>Hangman</h3>
-    		</div>
-
-    		<div class="work">
-       		<img src="" class="" alt="">
-        	<h3>RPG Game</h3>
-        	</div>
-
-        	<div class="work">
-       		<img src="" class="" alt="">
-        	<h3>Trivia Game</h3>
-        	</div>
-
-        	<div class="work">
-       		<img src="" class="" alt="">
-        	<h3>Rutgers Info Widget</h3>
-        	</div>
-
-        	<div class="work">
-       		<img src="" class="" alt="">
-        	<h3>Rock Paper Scissors</h3>
-    		</div>
-    	</section>		
-
-    <section id="socialLinks">
-        <div id="connect">
-            <h2>Connect with Me</h2>
-            <a href="https://github.com/Morecai" target="_blank"><img id="gitHub" src="assets/images/github.png"></img>
-            </a>
-            <a href="https://www.linkedin.com/in/frank-mcdonald-a2395a138/" target="_blank"><img id="linkedIn" src="assets/images/linkedin.png"></img>
-            </a>
-            <a href="http://stackoverflow.com/users/7803081/frank-mcdonald" target="_blank"><img id="stackOverflow" src="assets/images/so-icon.png"></img>
-            </a>
-        </div>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+        <h3>Hangman</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <h3>Rock Paper Scissors</h3>
+      </div>
     </section>
-</div>
-
-        
-    <footer class="site-footer">
-        &copy; Copyright Frank Mcdonald 2017
-    </footer>
-    
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Your Name
+    </div>
+  </footer>
 </body>
-
 </html>
